finish artists page

--- a/start/index.html
+++ b/start/index.html
@@ -20,10 +20,10 @@
               <a href="about/about.html">About</a>
             </li>
             <li>
-              <a href="#">Work</a>
+              <a href="./art-works/art-works.html">Work</a>
             </li>
             <li>
-              <a href="#">Artist</a>
+              <a href="./artist/artist.html">Artist</a>
             </li>
           </ul>
         </nav>
