--- a/start/about/about.html
+++ b/start/about/about.html
@@ -19,16 +19,16 @@
           <span class="welcome-txt">Welcome to Art Store, Login or Create new account</span>
           <ul class="top-nav-item">
             <li>
-              <a href="#"><i class="fas fa-camera"></i> My Account</a>
+              <a href="#"><i class="fas fa-user-circle"></i> My Account</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-camera"></i> Wish List</a>
+              <a href="#"><i class="fas fa-list-ol"></i> Wish List</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-camera"></i> Shopping Cart</a>
+              <a href="#"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-camera"></i> Checkout</a>
+              <a href="#"><i class="fas fa-gift"></i> Checkout</a>
             </li>
           </ul>
         </nav>
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Art Works</a>
+                  <a class="nav-link" href="../art-works/art-works.html">Art Works</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Artist</a>
@@ -83,6 +83,28 @@
           <p class="drop-shadow">It was created for IS183 at CSUF.</p>
           <button class="btn btn-primary drop-shadow">Learn More</button>
         </div>
+        <div class="top-section box-shadow">
+          <div class="top-inner-section">
+              <div class="pic-container">
+                  <img src="../img/picture.jpg" class="bio-image" alt="my pic">
+              </div>
+              <div class="bio-description">
+                  <h2>What is Lorem Ipsum?</h2>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                      the
+                      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                      type
+                      and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+                      the
+                      leap into electronic typesetting, remaining essentially unchanged.</p>
+                  <p>My name is simran brar and I am majoring in business computer information systems. My hobbies
+                      include
+                      playing basketball and going to the gym once in a while. I will be graduating this semester. I
+                      am hoping
+                      to find a job after I'm done with college.</p>
+              </div>
+          </div>
+      </div>
       </div>
     </div>
   </div>
