--- a/start/art-works/art-works.html
+++ b/start/art-works/art-works.html
@@ -56,10 +56,10 @@
                   <a class="nav-link" href="../about/about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Art Works</a>
+                  <a class="nav-link" href="../art-works/art-works.html">Art Works</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Artist</a>
+                  <a class="nav-link" href="../artist/artist.html">Artist</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
